<resources>
    <string name="app_name">Pranayama</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_current_password">Current password</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_confirm_new_password">Confirm new password</string>

    <string name="error_confirm_password">Confirm password does not match</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_account_does_not_exist">User account does not exist. Please sign up.</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>

    <!--asana names-->
    <string name="aasan_bhastrika">Bhastrika</string>
    <string name="aasan_kapal_bhati">Kapal bhati</string>
    <string name="aasan_bahaya">Bahaya</string>
    <string name="aasan_agnisar_kriya">Agnisar Kriya</string>
    <string name="aasan_anulom_vilom">Anulom Vilom</string>
    <string name="aasan_bharamri">Bharamri</string>
    <string name="aasan_udgeeth">Udgeeth</string>

    <string name="benefit_bhastrika">The ‘bellows breath’ is the fundamental breathing exercise that elevates the Prana (force of life) within you. Right from invigorating the mind and aiding in sleeping, to enhancing metabolism and helping in weight loss, the pose does all this and much more.</string>
    <string name="benefit_kapalbhati">One of the more popular forms of pranayama, this breathing exercise helps tackle multiple ailments and get over them naturally. The name comes from "Kapal" means forehead and "bhati" means shining, which denotes that the practitioner sees a glow on his/her face by doing this exercise regularly.</string>
    <string name="benefit_bahaya">This breathing exercise regulates the inhaling and exhaling process of breathing. By breathing out, you are expelling root causes of multiple ailments. With help of mulabandha, uddayana bandha and jalandhara bandha, the practitioner can help keep breath out of body and thus do this exercise in the correct manner.</string>
    <string name="benefit_agnisar_kriya">Lend robust vitality to your inner body by getting to know the right way to do this exercise with this app. This type of pranayama is beneficial in eliminating stomach disorders, digestions issues, constipation and appetite loss. It provides a holistic benefit to the body – from muscles and nerves, to internal organs.</string>
    <string name="benefit_anulom_vilom">This is an alternative form of breathing through nostrils. Adapting this form of breathing is bound to provide benefit in many different ways – it helps prevent the spread of chronic illnesses such as diabetes and high blood pressure. This app shows you how to carry out this essential breathing pose in the right way.</string>
    <string name="benefit_bharamri">Coined from the Sanskrit word Bharmar (humming bee), the humming sound that forms the core of this breathing technique, helps to relax the brain immediately by sending a signal to the hypothalamus, which controls the pituitary gland – the king of all glands across the body.</string>
    <string name="benefit_udgeeth">The most fundamental (and arguably the most popular) forms of breathing exercise under Yoga. This entails sitting in the yogic pose and chanting ‘Om!’ in a long breath. Though very simple, the app shows how it can be done for best benefit of your mind and body.</string>

    <string name="title_activity_main">Pranayama</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_break">Break time</string>
    <string name="title_activity_aasan">Aasan Activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_forgot_password">Forgot password</string>
    <string name="title_activity_change_password">Change password</string>
    <string name="title_activity_register">Sign up</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_setup">Schedule Setup</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password_short">Recover</string>
    <string name="action_recover">Recover</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_password_short">Change</string>
    <string name="action_change_password">Change password</string>
    <string name="action_update">Update</string>
    <string name="action_reload">Reload</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_short">Sign up</string>

    <string name="pick_image">Select photo</string>

    <string name="hint_full_name">Full Name</string>
    <string name="hint_dob">Date of birth</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_country">Country</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_timezone">Timezone</string>

    <string name="label_network_error">Please check your internet connection</string>
    <string name="label_loading">Loading…</string>
    <string name="label_set">Aasan set</string>
    <string name="label_skip">Skip</string>
    <string name="label_break_time">Break time</string>
    <string name="label_create_account">Create new account</string>
    <string name="label_forgot_password">Forgot password?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_history">History</string>
    <string name="drawer_item_profile">Profile</string>
    <string name="drawer_item_change_password">Change password</string>
    <string name="drawer_item_general_settings">Settings</string>
    <string name="drawer_item_schedule_setup">Schedule setup</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_logout">Logout</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="home">Home</string>
    <string name="pranayama_completed">Pranayama completed</string>
    <string name="dialog_message_discard_changes">Discard changes?</string>
    <string name="dialog_action_discard">Discard</string>
    <string name="action_login">Login</string>
    <string name="pref_key_music">PREF_MUSIC</string>
    <string name="pref_key_push_notification" translatable="false">PREF_PUSH_NOTIFICATION</string>
    <string name="password_changed_success_message">Password changed successfully.</string>
    <string name="error_invalid_date">Invalid date of birth</string>
    <string name="share">Share</string>
    <string name="label_setup_schedule">Let\'s setup schedule</string>
    <string name="benefits">Benefits</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="login_with_facebook">Login with Facebook</string>

    <string name="facebook_application_id" translatable="false">907528072657130</string>
    <string name="get_started">Get started</string>
    <string name="aasan_name">Aasan Name</string>
    <string name="less_than_14_error_message">Aasan/Break time should be more than 14 seconds</string>
    <string name="error">Error</string>
    <string name="dialog_action_save">Save</string>
    <string name="dialog_title_stop_pranayama">Stop the Prayanama?</string>
    <string name="dialog_action_stop">Stop</string>
    <string name="hint_location">Location</string>
    <string name="n_a">N/A</string>

    <string name="firebase_storage_ref">gs://pranayama-59f5c.appspot.com</string>
    <string name="total_time">Total time</string>
    <string name="date">Date</string>
    <string name="last_session">Last Session</string>

</resources>
