<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="it.techies.pranayama.activities.MainActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="8dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/gridLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aasan_bhastrika"
            android:id="@+id/textView1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aasan_kapal_bhati"
            android:id="@+id/textView2"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aasan_bahaya"
            android:id="@+id/textView3"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aasan_agnisar_kriya"
            android:id="@+id/textView4"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_margin="8dp"/>
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridLayout2"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aasan_anulom_vilom"
            android:id="@+id/textView5"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aasan_bharamri"
            android:id="@+id/textView6"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aasan_udgeeth"
            android:id="@+id/textView7"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_margin="8dp"/>
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="00:00 mins"
        android:id="@+id/time_tv"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start"
        android:backgroundTint="@android:color/white"
        android:id="@+id/start_button"
        android:padding="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/gridLayout"
        android:layout_alignStart="@+id/gridLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <include layout="@layout/loading"/>

    <include layout="@layout/reload"/>

</RelativeLayout>
