<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="it.techies.pranayama.activities.ChangePasswordActivity">

	<!-- Login progress -->
	<ProgressBar
		android:id="@+id/change_password_progress"
		style="?android:attr/progressBarStyleLarge"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:visibility="gone"/>

	<ScrollView
		android:id="@+id/change_password_form"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:id="@+id/change_password_form_ll"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">


			<com.rengwuxian.materialedittext.MaterialEditText
				android:id="@+id/current_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/prompt_current_password"
				android:inputType="textPassword"
				android:maxLines="1"
				android:singleLine="true"
				app:met_floatingLabel="highlight"
				app:met_primaryColor="@color/colorAccent"/>


			<com.rengwuxian.materialedittext.MaterialEditText
				android:id="@+id/new_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/prompt_new_password"
				android:inputType="textPassword"
				android:maxLines="1"
				android:singleLine="true"
				app:met_floatingLabel="highlight"
				app:met_primaryColor="@color/colorAccent"/>

			<com.rengwuxian.materialedittext.MaterialEditText
				android:id="@+id/confirm_new_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/prompt_confirm_new_password"
				android:imeActionId="@+id/action_change_password"
				android:imeActionLabel="@string/action_change_password_short"
				android:imeOptions="actionUnspecified"
				android:inputType="textPassword"
				android:maxLines="1"
				android:singleLine="true"
				app:met_floatingLabel="highlight"
				app:met_primaryColor="@color/colorAccent"/>

			<Button
				android:id="@+id/change_password_button"
				style="?android:textAppearanceButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:backgroundTint="@color/colorAccent"
				android:text="@string/action_change_password"
				android:textColor="@color/colorButtonText"/>

		</LinearLayout>
	</ScrollView>
</LinearLayout>
