<RelativeLayout
	android:id="@+id/login_root_ll"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="it.techies.pranayama.activities.LoginActivity">

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scaleType="fitXY"
		android:src="@drawable/background"/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ScrollView
			android:id="@+id/login_form"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:id="@+id/email_login_form"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingBottom="@dimen/activity_vertical_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin">

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginTop="16dp"
					android:layout_marginBottom="16dp"
					android:src="@drawable/ic_logo"/>

				<com.rengwuxian.materialedittext.MaterialEditText
					android:id="@+id/email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_email"
					android:inputType="textEmailAddress"
					android:maxLines="1"
					android:singleLine="true"
					android:text="jagdeep@yopmail.com"
					app:met_baseColor="@color/textColorSubHead"
					app:met_iconLeft="@drawable/ic_mail_outline_white_24dp"
					app:met_primaryColor="?attr/colorPrimary"
					app:met_textColor="@color/textColorSubHead"
					app:met_textColorHint="@color/textColorHint"
					app:met_underlineColor="@color/textColorHint"/>

				<com.rengwuxian.materialedittext.MaterialEditText
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_password"
					android:imeActionId="@+id/login"
					android:imeActionLabel="@string/action_sign_in_short"
					android:imeOptions="actionUnspecified"
					android:inputType="textPassword"
					android:maxLines="1"
					android:singleLine="true"
					android:text="Singh@1"
					app:met_baseColor="@color/textColorSubHead"
					app:met_iconLeft="@drawable/ic_lock_outline_white_24dp"
					app:met_primaryColor="?attr/colorPrimary"
					app:met_textColor="@color/textColorSubHead"
					app:met_textColorHint="@color/textColorHint"
					app:met_underlineColor="@color/textColorHint"/>

				<Button
					android:id="@+id/email_sign_in_button"
					style="?android:textAppearanceSmall"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					android:background="@color/colorAccent"
					android:text="@string/action_sign_in"
					android:textColor="@color/textColorSubHead"/>

				<com.facebook.login.widget.LoginButton
					android:id="@+id/login_button"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_marginTop="16dp"
					android:paddingBottom="16dp"
					android:paddingTop="16dp"/>

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp">

					<TextView
						android:id="@+id/forgot_password_tv"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentLeft="true"
						android:layout_alignParentStart="true"
						android:layout_centerHorizontal="true"
						android:background="?attr/selectableItemBackground"
						android:paddingBottom="8dp"
						android:paddingTop="8dp"
						android:text="@string/label_forgot_password"
						android:textColor="@color/textColorSubHead"/>

					<TextView
						android:id="@+id/create_account_tv"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentEnd="true"
						android:layout_alignParentRight="true"
						android:layout_centerHorizontal="true"
						android:background="?attr/selectableItemBackground"
						android:paddingBottom="8dp"
						android:paddingTop="8dp"
						android:text="@string/label_create_account"
						android:textColor="@color/textColorSubHead"/>

				</RelativeLayout>

			</LinearLayout>

		</ScrollView>

	</RelativeLayout>
</RelativeLayout>
