<LinearLayout android:id="@+id/forgot_password_root_ll"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="it.techies.pranayama.activities.ForgotPasswordActivity"
              xmlns:app="http://schemas.android.com/apk/res-auto">

	<ScrollView
		android:id="@+id/forgot_password_form"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:id="@+id/email_forgot_password_form"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">


			<com.rengwuxian.materialedittext.MaterialEditText
				android:id="@+id/email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/prompt_email"
				android:imeActionId="@+id/forgot_password"
				android:imeActionLabel="@string/action_forgot_password_short"
				android:imeOptions="actionUnspecified"
				android:inputType="textEmailAddress"
				app:met_primaryColor="@color/primary"
				app:met_floatingLabel="highlight"
				android:maxLines="1"
				android:singleLine="true"/>


			<Button
				android:id="@+id/email_forgot_password_button"
				style="?android:textAppearanceSmall"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:backgroundTint="@color/colorAccent"
				android:text="@string/action_recover"
				android:textColor="@color/colorButtonText"
				android:textStyle="bold"/>

		</LinearLayout>
	</ScrollView>
</LinearLayout>
