<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".modules.profile.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <ScrollView
        android:id="@+id/user_profile_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_profile_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_photo_iv"
                android:layout_width="@dimen/profile_photo_width"
                android:layout_height="@dimen/profile_photo_height"
                android:layout_gravity="center_horizontal"
                android:maxHeight="@dimen/profile_photo_width"
                android:maxWidth="@dimen/profile_photo_height"
                android:src="@drawable/ic_aasan"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="1dp"/>

            <LinearLayout
                android:id="@+id/full_name_view"
                style="@style/AppTheme.Profile.List.SelectableItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/AppTheme.Profile.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_full_name"/>

                <TextView
                    android:id="@+id/full_name_tv"
                    style="@style/AppTheme.Profile.Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Jagdeep Singh"/>

            </LinearLayout>

            <View
                style="@style/AppTheme.Profile.List.HR"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:id="@+id/date_of_birth_view"
                style="@style/AppTheme.Profile.List.SelectableItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/AppTheme.Profile.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_dob"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/date_of_birth_tv"
                    style="@style/AppTheme.Profile.Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/n_a"
                    tools:text="18/09/1990"/>

            </LinearLayout>

            <View
                style="@style/AppTheme.Profile.List.HR"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:id="@+id/location_view"
                style="@style/AppTheme.Profile.List.SelectableItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/AppTheme.Profile.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_location"/>

                <TextView
                    android:id="@+id/location_tv"
                    style="@style/AppTheme.Profile.Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/n_a"
                    tools:text="Ludhiana, Punjab, India"/>

            </LinearLayout>

            <View
                style="@style/AppTheme.Profile.List.HR"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:id="@+id/phone_number_view"
                style="@style/AppTheme.Profile.List.SelectableItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/AppTheme.Profile.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_phone_number"/>

                <TextView
                    android:id="@+id/phone_number_tv"
                    style="@style/AppTheme.Profile.Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/n_a"
                    tools:text="+8146888873"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
